8280460: MemorySegment::allocateNative should be tolerant of zero-sized allocation requests
Reviewed-by: jvernee